@@ -51,6 +51,27 @@
                         </configuration>
                     </execution>
 
+                    <execution>
+                        <id>run-compiled-mlib-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath />
+                                <argument>io.github.jmurmel.LambdaJ</argument>
+                                <argument>--verbose</argument>
+                                <argument>--run</argument>
+                                <argument>--libdir</argument>
+                                <argument>.</argument>
+                                <argument>mlib-test.lisp</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+
                     <!-- todo vielleicht gabriel samples auf mlib umbauen
                     <execution>
                         <id>run-gabriel</id>
@@ -119,7 +140,7 @@
                                 <argument>--verbose</argument>
                                 <argument>--libdir</argument>
                                 <argument>.</argument>
-                                <argument>../samples.mlib/lisperati/adventure_murmel.lisp</argument>
+                                <argument>./lisperati/adventure_murmel.lisp</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -140,7 +161,7 @@
                                 <argument>--run</argument>
                                 <argument>--libdir</argument>
                                 <argument>.</argument>
-                                <argument>../samples.mlib/lisperati/adventure_murmel.lisp</argument>
+                                <argument>./lisperati/adventure_murmel.lisp</argument>
                             </arguments>
                         </configuration>
                     </execution>
