@@ -8,6 +8,7 @@ Changes in JMurmel-1.2 relative to JMurmel-1.1
  * add limited support for macroexpand-1 in compiled code (quoted forms only)
  * fixed compiler primitive "list" to return a mutable list
  * fixed compiled "let*"
+ * fixed "append" for compiled code
 
 
 Changes in JMurmel-1.1 relative to JMurmel-1.0
